DSS-2972 : update documentation + fix unit tests